[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Sprite_Template.gd" type="Script" id=1]
[ext_resource path="res://addons/Database_Manager/Theme and Style/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/Database_Manager/Data/Icons/Downtown NPC.png" type="Texture" id=3]

[node name="Sprite_Template" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 298.0
rect_min_size = Vector2( 125, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sprite_Template"

[node name="HBox1" type="HBoxContainer" parent="."]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Space2" type="Label" parent="HBox1"]
visible = false
margin_right = 253.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HBox1"]
margin_right = 842.0
margin_bottom = 298.0
rect_min_size = Vector2( 125, 125 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.9
color = Color( 1, 1, 1, 0 )

[node name="Control" type="Control" parent="HBox1/ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="TextureButton" parent="HBox1/ColorRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="Label" parent="HBox1"]
visible = false
margin_left = 342.0
margin_right = 681.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="HBox1"]
margin_left = 846.0
margin_right = 1024.0
margin_bottom = 298.0

[node name="VBoxContainer" type="HBoxContainer" parent="HBox1/VBox1"]
margin_right = 178.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="HBox1/VBox1/VBoxContainer"]
margin_right = 87.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "V Frames"

[node name="Label2" type="Label" parent="HBox1/VBox1/VBoxContainer"]
margin_left = 91.0
margin_right = 178.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "H Frames"

[node name="VBox1" type="HBoxContainer" parent="HBox1/VBox1"]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VInput" type="LineEdit" parent="HBox1/VBox1/VBox1"]
margin_right = 75.0
margin_bottom = 280.0
rect_min_size = Vector2( 75, 25 )
size_flags_horizontal = 3
align = 1
placeholder_text = "0"
caret_blink = true

[node name="VBox1" type="VBoxContainer" parent="HBox1/VBox1/VBox1"]
margin_left = 79.0
margin_right = 87.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.26

[node name="Add_ButtonV" type="Button" parent="HBox1/VBox1/VBox1/VBox1"]
margin_right = 8.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="Sub_ButtonV" type="Button" parent="HBox1/VBox1/VBox1/VBox1"]
margin_top = 142.0
margin_right = 8.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="HInput" type="LineEdit" parent="HBox1/VBox1/VBox1"]
margin_left = 91.0
margin_right = 166.0
margin_bottom = 280.0
rect_min_size = Vector2( 75, 25 )
size_flags_horizontal = 3
align = 1
placeholder_text = "0"
caret_blink = true

[node name="VBox2" type="VBoxContainer" parent="HBox1/VBox1/VBox1"]
margin_left = 170.0
margin_right = 178.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.26

[node name="Add_ButtonH" type="Button" parent="HBox1/VBox1/VBox1/VBox2"]
margin_right = 8.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="Sub_ButtonH" type="Button" parent="HBox1/VBox1/VBox1/VBox2"]
margin_top = 142.0
margin_right = 8.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[connection signal="button_up" from="HBox1/ColorRect/Input" to="." method="_on_TextureButton_button_up"]
[connection signal="button_up" from="HBox1/VBox1/VBox1/VBox1/Add_ButtonV" to="." method="_on_Add_ButtonV_button_up"]
[connection signal="button_up" from="HBox1/VBox1/VBox1/VBox1/Sub_ButtonV" to="." method="_on_Sub_ButtonV_button_up"]
[connection signal="button_up" from="HBox1/VBox1/VBox1/VBox2/Add_ButtonH" to="." method="_on_Add_ButtonH_button_up"]
[connection signal="button_up" from="HBox1/VBox1/VBox1/VBox2/Sub_ButtonH" to="." method="_on_Sub_ButtonH_button_up"]
